# itmo-is-ml-linear-2024-5-sem

./: Cargo.toml  flake.nix
src/: gradient_descent.rs  lib.rs  linear_regression.rs  main.rs  parse.rs  ridge_regression.rs  support_vector_machine.rs
