[package]
name = "linear"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_panics_doc = "allow"
missing_errors_doc = "allow"
cast_precision_loss = "allow"
must_use_candidate = "allow"
cast_lossless = "allow"
type_complexity = "allow"
items_after_statements = "allow"

[dependencies]
csv = "1.3.1"
nalgebra = "0.33.2"
ndarray = "0.16"
plotters = "0.3.7"
